rns-lang/test_data/integration/error/lexer/strings/unterminated_string_after_escape.rns
.class public Test
"String ending with backslash\